# DataPact

./: .coveragerc  .gitignore  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  DASHBOARD.md  DELIVERY_SUMMARY.md  DEPENDENCIES.md  FEATURES.md  FILE_REFERENCE.md  INDEX.md  Makefile  PERFORMANCE_NFR_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SEQUENCE_DIAGRAM_GUIDE.md  SETUP_SUMMARY.md  Temp_Dependencies.md  VERSIONING_IMPLEMENTATION.md  context.txt  performance_report.xml  pyproject.toml  setup.py  sitecustomize.py  temp_implemenattion_plan.md  test_execute_log.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  tests.yml
demo/: DEMO_PLAN.md  run_demo.sh
demo/contracts/: consumer_a_deposit_accounts.yaml  consumer_a_deposit_accounts_updated.yaml  consumer_a_deposit_transactions.yaml  consumer_b_accounts_agg.yaml  consumer_b_loans_agg.yaml  consumer_c_exposure.yaml  producer_customers.yaml  producer_deposit_accounts.yaml  producer_deposit_transactions.yaml  producer_lending_loans.yaml  producer_loan_payments.yaml
demo/mysql/: schema.sql  (+1 more)
docs/: AI_INSTRUCTIONS_GUIDE.md  ARCHITECTURE.md  DASHBOARD.md  EXAMPLES.md  VERSIONING.md  sequenceDiagram.mmd
scripts/: create_excel_fixtures.py
tests/: __init__.py  test_banking_finance.py  test_chunked_validation.py  test_concurrency.py  test_concurrency_mp.py  test_contract_providers.py  test_custom_rules.py  test_dashboard.py  test_db_source.py  test_exhaustive_features.py  test_flatten_normalization.py  test_flattened_field_resolution.py  test_odcs_contract.py  test_performance.py  test_performance_extra.py  test_pii_validator.py  test_policy_packs.py  test_profiling.py  test_reporting.py  test_streaming_contracts.py  test_streaming_kafka.py  test_validator.py  test_versioning.py
(+130 files in other folders)
