[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datapact"
version = "0.1.0"
description = "Validate datasets against YAML data contracts"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Nishant Verma", email = "meetnishant@gmail.com"}]
license = {text = "MIT"}
keywords = ["data-quality", "data-contract", "validation", "schema"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=1.5.0",
    "pyyaml>=6.0",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.0",
]
db = [
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
]

[project.scripts]
datapact = "datapact.cli:main"
datapact-coverage = "datapact.coverage_check:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "PositiveCases: valid datasets expected to pass",
    "NegativeCases: invalid datasets expected to fail",
    "BoundaryCases: edge-case datasets around thresholds",
]
